# data-driver

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md  vcpkg.json
data/: Dawnguard.esm  Dragonborn.esm  HearthFires.esm  Skyrim.esm  Update.esm
docs/: CMakeLists.txt  doxyfile.in
driver/: CMakeLists.txt
driver/include/opensk/data/: driver.hpp  export.hpp  plugin.hpp  plugin_source.hpp
driver/src/: config.hpp.in  driver.cpp  plugin.cpp
examples/: CMakeLists.txt  manual_read_data.cpp  memory_mapped_files.cpp
interface/: CMakeLists.txt
tests/: CMakeLists.txt  smoke_test.cxx
